--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <div class="col-12 col-lg-3">
                         <div class="header-content bg-dark h-100 pt-6 pe-6 pb-6">
                             <a href="index.html" class="navbar-brand d-inline-flex pb-5 wow fadeInUp" data-wow-delay="0.1s">
-                                <h1 class="display-6 text-white mb-0">Pigra</h1>
+                                <h1 class="display-6 text-white mb-0">Tafajjal Islam</h1>
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
-                                <p class="text-white sub-title">👋 Hello I'm Mezbah</p>
-                                <h1 class="display-6 text-white mb-0">Creative Designer Based in USA</h1>
+                                <p class="text-white sub-title">👋 Hello I'm Tafajjal Islam</p>
+                                <h1 class="display-6 text-white mb-0">Psychologist and Researcher in Bangladesh</h1>
                             </div>
                         </div>
                     </div>
