--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                                 <h1 class="display-6 text-white mb-0">Tafajjal Islam</h1>
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
-                                <p class="text-white sub-title">👋 Hello I'm Tafajjal Islam</p>
-                                <h1 class="display-6 text-white mb-0">Psychologist and Researcher in Bangladesh</h1>
+                                <p class="text-white sub-title">Assalamualikum</p>
+                                <h1 class="display-6 text-white mb-0">Counselor & Researcher</h1>
                             </div>
                         </div>
                     </div>
@@ -79,24 +79,24 @@
                                     </div>
                                 </div>
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
-                                    <h1 class="display-6 mb-4">Junior UI/UX Designer Developer</h1>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed animi et laboriosam facere tempora rerum, eligendi veritatis nesciunt cum?
+                                    <h1 class="display-6 mb-4">Counselor & Researcher</h1>
+                                    <p class="mb-4">To work in the mental health sector of different private or public organizations in Bangladesh in its mental health unit and grow rapidly with increasing responsibilities.
                                     </p>
                                     <div class="d-flex align-items-center mb-2">
                                         <i class="fas fa-map-marker-alt text-primary me-3"></i>
-                                        <p class="text-dark mb-0">123 Street New York.USA</p>
+                                        <p class="text-dark mb-0">Nurjahan Rd, Mohammadpur, Dhaka-1207, Bangladesh</p>
                                     </div>
                                     <div class="d-flex align-items-center mb-2">
                                         <i class="fas fa-envelope text-primary me-3"></i>
-                                        <p class="text-dark mb-0">info@example.com</p>
+                                        <p class="text-dark mb-0">tafazzal.edu@gmail.com</p>
                                     </div>
                                     <div class="d-flex align-items-center mb-2">
                                         <i class="fa fa-phone-alt text-primary me-3"></i>
-                                        <p class="text-dark mb-0">(+012) 3456 7890</p>
+                                        <p class="text-dark mb-0">(+880)1648-520548</p>
                                     </div>
                                     <div class="d-flex align-items-center mb-4">
                                         <i class="fab fa-firefox-browser text-primary me-3"></i>
-                                        <p class="text-dark mb-0">Yoursite@ex.com</p>
+                                        <p class="text-dark mb-0">tafajjal.vercel.app</p>
                                     </div>
                                     <div class="d-flex">
                                         <a class="btn btn-primary btn-sm-square me-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
@@ -133,29 +133,23 @@
                                     <div class="about-img bg-light p-4 wow fadeInUp" data-wow-delay="0.1s">
                                         <img src="img/about.jpg" class="img-fluid w-100" alt="Image">
                                         <div class="sosial-icon">
-                                            <a class="btn btn-primary btn-sm-square mb-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
-                                            <a class="btn btn-primary btn-sm-square mb-3" href="#"><i class="fab fa-twitter text-white"></i></a>
-                                            <a class="btn btn-primary btn-sm-square mb-3" href="#"><i class="fab fa-instagram text-white"></i></a>
-                                            <a class="btn btn-primary btn-sm-square mb-0" href="#"><i class="fab fa-linkedin-in text-white"></i></a>
+                                            <a class="btn btn-primary btn-sm-square mb-3" href="https://www.facebook.com/tafazzal3212/"><i class="fab fa-facebook-f text-white"></i></a>
+                                            <a class="btn btn-primary btn-sm-square mb-3" href="https://x.com/TahmidH98441297"><i class="fab fa-twitter text-white"></i></a>
+                                            <a class="btn btn-primary btn-sm-square mb-3" href="https://orcid.org/0009-0000-5671-4457"><i class="fab fa-orcid text-white"></i></a>
+                                            <a class="btn btn-primary btn-sm-square mb-0" href="https://www.linkedin.com/in/tafajjal-edu/"><i class="fab fa-linkedin-in text-white"></i></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-xl-7 wow fadeInUp" data-wow-delay="0.3s">
-                                    <h4 class="mb-4">Hello, I'm Mezbah, Based in USA</h4>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam repellat, sint magni incidunt voluptatum eveniet numquam vel facilis sit similique a mollitia et dolorum aperiam repellendus ipsum, quidem nemo eligendi!
+                                    <h4 class="mb-4">AT A GLANCE</h4>
+                                    <p class="mb-4">	MS & BSc in Psychology at University of Rajshahi
+Research Assistant at three renowned institutions in more than 3 years at Rajshahi Division.
+Almost 3 years work experience at two renowned institutions.
+Research Article: Published-4; Accepted-4; Conference, P-2
+Skill: Proficient in handling research software such as Zotero, Mendeley, SPSS, Endnote, NVivo, Kobo Toolbox, and LaTeX.
+
                                     </p>
-                                    <div class="row g-4 mb-4">
-                                        <div class="col-6">
-                                            <p><strong class="fw-bold text-dark">Phone :</strong> + 113-804-9098</p>
-                                            <p><strong class="fw-bold text-dark">skype :</strong> mezbah.wallas</p>
-                                            <p class="mb-0"><strong class="fw-bold text-dark">Address :</strong> 123 Street New York</p>
-                                        </div>
-                                        <div class="col-6">
-                                            <p><strong class="fw-bold text-dark">Nationality :</strong> New York, USA</p>
-                                            <p><strong class="fw-bold text-dark">Email :</strong> contact@mezbah.com</p>
-                                            <p class="mb-0"><strong class="fw-bold text-dark">Freelancer :</strong> Available</p>
-                                        </div>
-                                    </div>
+                                    
                                     <a href="#" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
                                 </div>
                             </div>
@@ -185,39 +179,25 @@
                                 <div class="col-12">
                                     <div class="education-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
                                         <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">National University</p>
+                                            <p class="fs-5 mb-0 me-4">Rajshahi University</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2017 - 2019
+                                                <span class="fa fa-calendar me-1"></span> 2023 - 2025
                                             </div>
                                         </div>
-                                        <h4 class="mb-3">Diploma in Computer</h4>
-                                        <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
-                                        </p>
+                                        <h4 class="mb-3">Masters in Psychology</h4>
+                                        <p class="mb-0">Thesis Topic: The Mediating Effect of Mental Well-being and resilience on the Association Between Drug Use and Suicidal Thoughts
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="education-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
                                         <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">Webster College</p>
+                                            <p class="fs-5 mb-0 me-4">Rajshahi University</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2017 - 2019
+                                                <span class="fa fa-calendar me-1"></span> 2018 - 2023
                                             </div>
                                         </div>
-                                        <h4 class="mb-3">UI/UX Design</h4>
-                                        <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="education-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.5s">
-                                        <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">Oxford University</p>
-                                            <div>
-                                                <span class="fa fa-calendar me-1"></span> 2017 - 2019
-                                            </div>
-                                        </div>
-                                        <h4 class="mb-3">Java Development</h4>
-                                        <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
+                                        <h4 class="mb-3">Bachelor of Science in Psychology</h4>
+                                        <p class="mb-0">Fieldwork Topic: The effect of emotional intelligence on academic performance among university students in Bangladesh.
                                         </p>
                                     </div>
                                 </div>
@@ -247,39 +227,66 @@
                                 <div class="col-12">
                                     <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
                                         <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">Historian</p>
+                                            <p class="fs-5 mb-0 me-4">as a psychologist</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2017 - 2019
+                                                <span class="fa fa-calendar me-1"></span> 2024-current
                                             </div>
                                         </div>
-                                        <h4 class="mb-3">Seinor UI/UX Desinger</h4>
-                                        <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
+                                        <h4 class="mb-3">Counselor at Model Addiction & Psychiatry Care</h4>
+                                        <p class="mb-0">My goal is to create a safe, non-judgmental space where clients can explore their feelings, gain insights, and develop coping strategies to lead fulfilling lives. By integrating different therapeutic techniques, I ensure that each client receives the most appropriate and effective treatment for their unique circumstances.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
                                         <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">Historian</p>
+                                            <p class="fs-5 mb-0 me-4">as a psychologist</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2017 - 2019
+                                                <span class="fa fa-calendar me-1"></span> 2025
                                             </div>
                                         </div>
-                                        <h4 class="mb-3">UI/UX Designer</h4>
-                                        <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
+                                        <h4 class="mb-3">Intern Psychologist</h4>
+                                        <p class="mb-0">
+Assisted in psychological assessments, counseling, and research.
+Collaborated with psychiatrists and clinical psychologists.
+
                                         </p>
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.5s">
+                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
                                         <div class="d-flex align-items-center mb-3">
-                                            <p class="fs-5 mb-0 me-4">Historian</p>
+                                            <p class="fs-5 mb-0 me-4">as a researcher</p>
                                             <div>
-                                                <span class="fa fa-calendar me-1"></span> 2017 - 2019
+                                                <span class="fa fa-calendar me-1"></span> 2024 - current
                                             </div>
                                         </div>
-                                        <h4 class="mb-3">Junior Visual Designer</h4>
-                                        <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
+                                        <h4 class="mb-3">Research Assistant at Health research Group</h4>
+                                        <p class="mb-0">Ongoing Project: Patterns of Substance Use Among Psychotic Inpatients: A Cross-Sectional Study
+Tasks:
+Survey data collection and data analysis 
+Writing manuscripts as a first author 
+Review, edit, and ensure data accuracy
+
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
+                                        <div class="d-flex align-items-center mb-3">
+                                            <p class="fs-5 mb-0 me-4">as a researcher</p>
+                                            <div>
+                                                <span class="fa fa-calendar me-1"></span> 2022 - 2023
+                                            </div>
+                                        </div>
+                                        <h4 class="mb-3">Research Assistant at Institute of Natural Resources Research and Development</h4>
+                                        <p class="mb-0">
+Tasks:
+Writing manuscripts as a first author 
+Review, edit, and ensure data accuracy
+Conduct literature reviews and data analysis
+
+
                                         </p>
                                     </div>
                                 </div>
