--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@
                                 <h1 class="display-6 text-white mb-0">Tafajjal Islam</h1>
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
-                                <p class="text-white sub-title">Assalamualikum</p>
-                                <h1 class="display-6 text-white mb-0">Counselor & Researcher</h1>
+                                <p class="text-white sub-title">PERSONAL DETAILS</p>
+Dated of birth :   05 Nov. 1998
+Height         : 5’6”
+Nationality    : Bangladeshi
+Marital Status : unmarried
+Home District  : Nilphamari
+
                             </div>
                         </div>
                     </div>
@@ -122,7 +127,7 @@
                         <div class="about-header bg-dark h-100 pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                                 <p class="text-white sub-title">About Me</p>
-                                <h1 class="display-6 text-white mb-0">UI Designer based in NYC, USA since 2025</h1>
+                                <h1 class="display-6 text-white mb-0">Counselor & Researcher</h1>
                             </div>
                         </div>
                     </div>
@@ -133,20 +138,27 @@
                                     <div class="about-img bg-light p-4 wow fadeInUp" data-wow-delay="0.1s">
                                         <img src="img/about.jpg" class="img-fluid w-100" alt="Image">
                                         <div class="sosial-icon">
-                                            <a class="btn btn-primary btn-sm-square mb-3" href="https://www.facebook.com/tafazzal3212/"><i class="fab fa-facebook-f text-white"></i></a>
-                                            <a class="btn btn-primary btn-sm-square mb-3" href="https://x.com/TahmidH98441297"><i class="fab fa-twitter text-white"></i></a>
+                                            <a class="btn btn-primary btn-sm-square mb-3" href="https://www.facebook.com/tafazzal3212/" target="_blank">
+    <i class="fab fa-facebook-f text-white"></i>
+</a>
+<a class="btn btn-primary btn-sm-square mb-3" href="https://x.com/TahmidH98441297" target="_blank">
+    <i class="fab fa-twitter text-white"></i>
+</a>
                                             <a class="btn btn-primary btn-sm-square mb-3" href="https://orcid.org/0009-0000-5671-4457"><i class="fab fa-orcid text-white"></i></a>
-                                            <a class="btn btn-primary btn-sm-square mb-0" href="https://www.linkedin.com/in/tafajjal-edu/"><i class="fab fa-linkedin-in text-white"></i></a>
+                                           <a class="btn btn-primary btn-sm-square mb-0" href="https://www.linkedin.com/in/tafajjal-edu/" target="_blank">
+    <i class="fab fa-linkedin-in text-white"></i>
+</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-xl-7 wow fadeInUp" data-wow-delay="0.3s">
                                     <h4 class="mb-4">AT A GLANCE</h4>
-                                    <p class="mb-4">	MS & BSc in Psychology at University of Rajshahi
-Research Assistant at three renowned institutions in more than 3 years at Rajshahi Division.
-Almost 3 years work experience at two renowned institutions.
-Research Article: Published-4; Accepted-4; Conference, P-2
-Skill: Proficient in handling research software such as Zotero, Mendeley, SPSS, Endnote, NVivo, Kobo Toolbox, and LaTeX.
+                                    <p class="mb-4">
+<strong>MS & BSc in Psychology</strong> at University of Rajshahi
+<strong>Research Assistant</strong> at three renowned institutions in more than 3 years at Rajshahi Division.
+<strong>Almost 3 years work experience</strong> at two renowned institutions.
+<strong>Research Article:</strong> Published-4; Accepted-4; Conference, P-2
+<strong>Skill:</strong> Proficient in handling research software such as Zotero, Mendeley, SPSS, Endnote, NVivo, Kobo Toolbox, and LaTeX.
 
                                     </p>
                                     
@@ -217,7 +229,7 @@ Skill: Proficient in handling research software such as Zotero, Mendeley, SPSS, 
                         <div class="experience-header bg-dark h-100 pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                                 <p class="text-white sub-title">Experience</p>
-                                <h1 class="display-6 text-white mb-0">My real work experience</h1>
+                                <h1 class="display-6 text-white mb-0"> Work & Research Experience</h1>
                             </div>
                         </div>
                     </div>
