--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@ Home District  : Nilphamari
                                 <div class="col-xl-7 wow fadeInUp" data-wow-delay="0.3s">
                                     <h4 class="mb-4">AT A GLANCE</h4>
                                     <p class="mb-4">
-<strong>MS & BSc in Psychology</strong> at University of Rajshahi
-<strong>Research Assistant</strong> at three renowned institutions in more than 3 years at Rajshahi Division.
-<strong>Almost 3 years work experience</strong> at two renowned institutions.
-<strong>Research Article:</strong> Published-4; Accepted-4; Conference, P-2
-<strong>Skill:</strong> Proficient in handling research software such as Zotero, Mendeley, SPSS, Endnote, NVivo, Kobo Toolbox, and LaTeX.
+<strong>MS & BSc in Psychology</strong> at University of Rajshahi<br>
+<strong>Research Assistant</strong> at three renowned institutions in more than 3 years at Rajshahi Division.<br>
+<strong>Almost 3 years work experience</strong> at two renowned institutions.<br>
+<strong>Research Article:</strong> Published-4; Accepted-4; Conference, P-2<br>
+<strong>Skill:</strong> Proficient in handling research software such as Zotero, Mendeley, SPSS, Endnote, NVivo, Kobo Toolbox, and LaTeX.<br>
 
                                     </p>
                                     
