--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Home District  : Nilphamari
                             <div class="row g-5">
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="bg-light p-4" style="border-radius: 68% 32% 100% 0% / 0% 75% 25% 100%;">
-                                        <img src="img/header-img.jpg" class="img-fluid w-100" style="border-radius: 68% 32% 100% 0% / 0% 75% 25% 100%;" alt="Image">
+                                        <img src="https://github.com/tafajjal-edu/tem/blob/main/img/photo_2025-04-23_16-57-57.jpg" class="img-fluid w-100" style="border-radius: 68% 32% 100% 0% / 0% 75% 25% 100%;" alt="Image">
                                     </div>
                                 </div>
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -162,7 +162,7 @@ Home District  : Nilphamari
 
                                     </p>
                                     
-                                    <a href="#" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
+                                    <a href="https://github.com/tafajjal-edu/tem/blob/main/CV%20of%20Tafajjal%20Islam%206.4.pdf" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
                                 </div>
                             </div>
                         </div>
