--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Home District  : Nilphamari
                             <div class="row g-5">
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="bg-light p-4" style="border-radius: 68% 32% 100% 0% / 0% 75% 25% 100%;">
-                                        <img src="https://github.com/tafajjal-edu/tem/blob/main/img/photo_2025-04-23_16-57-57.jpg" class="img-fluid w-100" style="border-radius: 68% 32% 100% 0% / 0% 75% 25% 100%;" alt="Image">
+                                        <img src="img/photo_2025-04-23_16-57-57.jpg" class="img-fluid w-100" style="border-radius: 68% 32% 100% 0% / 0% 75% 25% 100%;" alt="Image">
                                     </div>
                                 </div>
                                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -104,10 +104,10 @@ Home District  : Nilphamari
                                         <p class="text-dark mb-0">tafajjal.vercel.app</p>
                                     </div>
                                     <div class="d-flex">
-                                        <a class="btn btn-primary btn-sm-square me-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-3" href="#"><i class="fab fa-twitter text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-3" href="#"><i class="fab fa-instagram text-white"></i></a>
-                                        <a class="btn btn-primary btn-sm-square me-0" href="#"><i class="fab fa-linkedin-in text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-3" href="https://www.facebook.com/tafazzal3212/" target="_blank"><i class="fab fa-facebook-f text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-3" href="https://x.com/TahmidH98441297" target="_blank"><i class="fab fa-twitter text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-3" href="https://orcid.org/0009-0000-5671-4457" target="_blank"><i class="fab fa-instagram text-white"></i></a>
+                                        <a class="btn btn-primary btn-sm-square me-0" href="https://www.linkedin.com/in/tafajjal-edu/" target="_blank"><i class="fab fa-linkedin-in text-white"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -136,7 +136,7 @@ Home District  : Nilphamari
                             <div class="row g-5">
                                 <div class="col-xl-5">
                                     <div class="about-img bg-light p-4 wow fadeInUp" data-wow-delay="0.1s">
-                                        <img src="img/about.jpg" class="img-fluid w-100" alt="Image">
+                                        <img src="img/image2.jpg" class="img-fluid w-100" alt="Image">
                                         <div class="sosial-icon">
                                             <a class="btn btn-primary btn-sm-square mb-3" href="https://www.facebook.com/tafazzal3212/" target="_blank">
     <i class="fab fa-facebook-f text-white"></i>
@@ -162,7 +162,7 @@ Home District  : Nilphamari
 
                                     </p>
                                     
-                                    <a href="https://github.com/tafajjal-edu/tem/blob/main/CV%20of%20Tafajjal%20Islam%206.4.pdf" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
+                                    <a href="CV of Tafajjal Islam 6.4.pdf" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
                                 </div>
                             </div>
                         </div>
@@ -489,7 +489,7 @@ Conduct literature reviews and data analysis
                     <div class="col-lg-3">
                         <div class="portfolio-header h-100 bg-dark pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
-                                <p class="text-white sub-title">Portfolio</p>
+                                <p class="text-white sub-title">Publications</p>
                                 <h1 class="display-6 text-white mb-0">My Recent Works</h1>
                             </div>
                         </div>
@@ -499,19 +499,20 @@ Conduct literature reviews and data analysis
                             <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Web Design</h4>
-                                        <h1 class="display-6 mb-0">Software Design for ABC Corporation</h1>
+                                        <h4 class="text-body">Original Articles</h4>
+                                        <h1 class="display-6 mb-0">SLEEPING PATTERNS AND ONLINE GAMING HABITS: UNRAVELLING THEIR INFLUENCE ON ANGER TOLERANCE AMONG UNIVERSITY STUDENTS</h1>
+                                        <h5>Cite: Islam, M. M., Mimi, A.., Khatun, M., Sarker, P. C., Islam, T., & Based, M.A.A (2025). Sleeping Patterns and Online Gaming Habits: Unravelling Their Influence on Anger Tolerance Among University Students: Original Research.Psych. Nurs. J., 7(1). 1-6. doi.org/ 10.53344/pnj.v7.i1.56578</h5>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
-                                                <img src="img/Portfolio-1.jpg" class="img-fluid" alt="Image">
+                                                <img src="img/sleepimage.jpg" class="img-fluid" alt="Image">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/Portfolio-1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="Portfolio-1"><i class="fas fa-plus"></i></a>
+                                            <a href="img/sleepimage.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="Portfolio-1"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -519,19 +520,20 @@ Conduct literature reviews and data analysis
                             <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Web Development</h4>
-                                        <h1 class="display-6 mb-0">Website Development for ABC Corporation</h1>
+                                        <h4 class="text-body">Review Article</h4>
+                                        <h1 class="display-6 mb-0">Common mental health problems among different populations in Bangladesh– A systematic review</h1>
+                                        <h5>Cite: Mia M, Islam T, Khatun M, Zubair MBU. Common mental health problems among different populations in Bangladesh– A systematic review. Journal of Fundamentals of Mental Health 2025 Jan-Feb; 27(1): 1-11. DOI: 10.22038/JFMH.2024.82635.3169</h5>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
-                                                <img src="img/portfolio-2.jpg" class="img-fluid" alt="Image">
+                                                <img src="img/reviewimage.jpg" class="img-fluid" alt="Image">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/portfolio-2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                            <a href="img/reviewimage.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
